# CS184-final-project

./: .gitignore  README.md  Untitled-1.ipynb  _config.yml  index.html  index.md  water_sim.py  water_sim_basic.py  water_sim_new.py
_layouts/: default.html  project.html
milestone/: milestone_info.txt
proposal/: proposal_info.txt
water_droplet_sim_skeleton/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
water_droplet_sim_skeleton/assets/shaders/: droplet_gbuffer.frag  droplet_gbuffer.vert  refract_composite.frag  refract_composite.vert  scene.frag  scene.vert
water_droplet_sim_skeleton/docs/: MODULE_OVERVIEW.md
water_droplet_sim_skeleton/include/wd/app/: app.h
water_droplet_sim_skeleton/include/wd/core/: scene.h  types.h
water_droplet_sim_skeleton/include/wd/experiments/: experiment_logger.h
water_droplet_sim_skeleton/include/wd/forces/: iforce_field.h
water_droplet_sim_skeleton/include/wd/interaction/: drag_interactor.h  input_router.h  picker.h
water_droplet_sim_skeleton/include/wd/render/: droplet_gpu_cache.h  gpu_mesh_buffer.h  refractive_renderer.h
water_droplet_sim_skeleton/include/wd/sim/: droplet.h  droplet_cache.h  droplet_factory.h  droplet_template.h  merge_split_controller.h  operators.h  simulation_system.h  single_droplet_solver.h
water_droplet_sim_skeleton/include/wd/surface/: heightfield_surface.h  isurface.h  plane_surface.h
water_droplet_sim_skeleton/include/wd/ui/: ui_controller.h
water_droplet_sim_skeleton/src/: main.cpp
water_droplet_sim_skeleton/src/app/: app.cpp
water_droplet_sim_skeleton/src/core/: scene.cpp
water_droplet_sim_skeleton/src/experiments/: experiment_logger.cpp
water_droplet_sim_skeleton/src/forces/: iforce_field.cpp
water_droplet_sim_skeleton/src/interaction/: drag_interactor.cpp  input_router.cpp  picker.cpp
water_droplet_sim_skeleton/src/render/: droplet_gpu_cache.cpp  gpu_mesh_buffer.cpp  refractive_renderer.cpp
water_droplet_sim_skeleton/src/sim/: droplet.cpp  droplet_factory.cpp  droplet_template.cpp  merge_split_controller.cpp  operators.cpp  simulation_system.cpp  single_droplet_solver.cpp
water_droplet_sim_skeleton/src/surface/: heightfield_surface.cpp  plane_surface.cpp
water_droplet_sim_skeleton/src/ui/: ui_controller.cpp
